# tui-td-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: api.md  architecture.md
examples/: basic_tui_driver.py  echo_demo.py  interactive_session.py  snapshot_diff.py
tests/: test_driver.py  test_integration.py  test_rpc.py  test_smoke.py
tui_td/: __init__.py  driver.py  exceptions.py  models.py  rpc.py
