[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tui-td-py"
version = "0.1.0"
description = "Official Python wrapper for tui-td — TUI testing and automation for coding agents"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "tui-td contributors" },
]
keywords = ["tui", "terminal", "testing", "automation", "agent", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[project.urls]
Homepage = "https://github.com/tui-td/tui-td-py"
Repository = "https://github.com/tui-td/tui-td-py"

[tool.hatch.build.targets.wheel]
packages = ["tui_td"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
strict = true
python_version = "3.10"
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
